[gd_scene load_steps=6 format=3 uid="uid://b3tgm76g3axnl"]

[ext_resource type="Script" path="res://Scenes/Buildings/TurrentExample.gd" id="1_nwr8v"]
[ext_resource type="Texture2D" uid="uid://rsgrhpp26vr4" path="res://Assets/Buildings/turrents_1_left.png" id="2_eey7j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lg42b"]
size = Vector2(56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_55nld"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_eey7j")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w4igf"]
radius = 180.0

[node name="TurrentExample" type="Area2D" groups=["Building"]]
collision_mask = 3
script = ExtResource("1_nwr8v")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lg42b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.8147e-06, 0)
scale = Vector2(0.451613, 0.54902)
sprite_frames = SubResource("SpriteFrames_55nld")
frame_progress = 0.928218

[node name="AreaAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="AreaAttackShape" type="CollisionShape2D" parent="AreaAttack"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_w4igf")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="AreaAttack" to="." method="_on_area_attack_area_entered"]
[connection signal="area_exited" from="AreaAttack" to="." method="_on_area_attack_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
